<resources>
    <string name="app_name">Edios TOI Admin</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_order_history">Orders History</string>
    <string name="menu_order_summary">Order Summary</string>
    <string name="menu_search_orders">Search Orders</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_settings">Settings</string>
    <string name="pending">Pending</string>
    <string name="in_kitchen">In-Kitchen</string>
    <string name="pickup">Pickup</string>
    <string name="completed">Complelted</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refresh">Refresh</string>
    <string name="filter">Filter</string>
    <string name="order_delivery_time_in_minutes">Order Delivery Time (In Minutes)</string>
    <string name="order_history_menu">Orders History</string>
    <string name="order_info_title">Order Information</string>
    <string name="order_number">Order Number</string>
    <string name="order_ready_time_in_minutes">Order Ready Time (In Minutes)</string>
    <string name="order_status">Order Status</string>
    <string name="order_summary_menu">Orders Summary</string>
    <string name="order_type">Order Type</string>
    <string name="order_type_delivery">Delivery</string>
    <string name="order_type_filter">Order Type Filter</string>
    <string name="order_type_restaurant">Restaurant</string>
    <string name="order_type_ta_dl">Take Away &amp; Delivery</string>
    <string name="order_type_take_away">Take Away</string>
    <string name="delivery_radius_mi">Delivery Radius(Mi)</string>
    <string name="delivery_charges">Delivery Charges ($)</string>

    <string name="delivery_charges_bill">Percentage of Bill</string>
    <string name="delivery_charges_fixed">Fixed</string>
    <string name="delivery_charges_fixed_hint">Delivery Charges ($)</string>
    <string name="delivery_charges_free">Free</string>
    <string name="automatic_bill_printing">Automatic Bill Printing</string>
    <string name="shutdown_end_user">Shutdown End User</string>
    <string name="order_type_both">Both </string>
    <string name="dashboard_refresh_time_in_seconds">Dashboard Refresh Time (In Seconds)</string>

    <string name="print_2_inch">2 Inch</string>
    <string name="print_3_inch">3 Inch</string>
    <string name="print_check">Print Check</string>
    <string name="print_size">Print Size</string>
    <string name="print_tsp_3_inch">TSP 3 Inch</string>
    <string name="no_orders_found">No Order(s) Found</string>
    <string name="no_delivery_partner_is_available">No Delivery Partner is Available</string>
    <string name="delivery_partner">Delivery Partner</string>
    <string name="delivery_status">Delivery Status</string>
    <string name="delivery_status_time">Delivery Status Time</string>
    <string name="order_name">Sonu Kumar</string>
    <string name="order_date">Dec 6 ,2019 9:12:30 PM</string>


</resources>
