<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.OrderInformation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/border"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/info_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/order_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/info_mobileno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:text="8283941295"
                android:textSize="16sp" />



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll_order_info"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/oi_item_name_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="TOI -145 (Pending)"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/oi_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_date"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/oi_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_type"
                android:textSize="18sp" />


            <LinearLayout
                android:visibility="gone"
                android:id="@+id/info_ll_dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="4"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/delivery_partner" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" - " />

                        <TextView
                            android:id="@+id/info_dp_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Not Selected"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <ImageButton
                        android:id="@+id/info_addDp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:src="@drawable/ic_add"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delivery_status"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/info_dp_status"
                        android:text="Active"
                        android:layout_marginLeft="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:layout_marginStart="10sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delivery_status_time"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/info_dp_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Dec 2019 9:50"
                        android:layout_marginLeft="10sp"
                        android:textSize="15sp"
                        android:layout_marginStart="10sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:id="@+id/line11"
                android:background="@android:color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/info_items_recycleview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="5dp"
                android:id="@+id/line2"
                android:background="@android:color/black" />

            <TextView
                android:id="@+id/tv_totalDiscount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginRight="0dp"
                android:gravity="end"
                android:textSize="17sp"
                android:visibility="gone" />


            <TextView
                android:id="@+id/oi_item_total_tax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginRight="0dp"
                android:gravity="end"
                android:text="Total Tax :"
                android:textSize="17sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/oi_item_total_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginRight="0dp"
                android:gravity="end"
                android:text="Total Amount :"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_order_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_margin="5dp"
                android:layout_marginRight="0dp"
                android:gravity="start"
                android:text="Order Instructions: "
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/oi_item_other_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="N/A"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
